tests/baselines/reference/jsxChildrenGenericContextualTypes.errors.txt
tests/cases/compiler/jsxChildrenGenericContextualTypes.tsx(20,31): error TS2326: Types of property 'children' are incompatible.
  Type '(p: IntrinsicAttributes & LitProps<"x">) => "y"' is not assignable to type '(x: IntrinsicAttributes & LitProps<"x">) => "x"'.
    Type '"y"' is not assignable to type '"x"'.
tests/cases/compiler/jsxChildrenGenericContextualTypes.tsx(21,19): error TS2610: The attributes provided to ElemLit are not assignable to type 'IntrinsicAttributes & LitProps<"x" | "y">'
  The attributes provided to ElemLit are not assignable to type 'LitProps<"x" | "y">'
    Types of property 'children' are incompatible.
      Type '(p: IntrinsicAttributes & LitProps<"x">) => "y"' is not assignable to type '(x: LitProps<"x" | "y">) => "x" | "y"'.
        Types of parameters 'p' and 'x' are incompatible.
          Type 'LitProps<"x" | "y">' is not assignable to type 'IntrinsicAttributes & LitProps<"x">'.
            Type 'LitProps<"x" | "y">' is not assignable to type 'LitProps<"x">'.
              Types of property 'prop' are incompatible.
                Type '"x" | "y"' is not assignable to type '"x"'.
                  Type '"y"' is not assignable to type '"x"'.
tests/cases/compiler/jsxChildrenGenericContextualTypes.tsx(22,21): error TS2610: The attributes provided to ElemLit are not assignable to type 'IntrinsicAttributes & LitProps<"x">'
  The attributes provided to ElemLit are not assignable to type 'LitProps<"x">'
    Types of property 'children' are incompatible.
      Type '() => number' is not assignable to type '(x: LitProps<"x">) => "x"'.
        Type 'number' is not assignable to type '"x"'.


==== tests/cases/compiler/jsxChildrenGenericContextualTypes.tsx (3 errors) ====
    namespace JSX {
        export interface Element {}
        export interface ElementAttributesProperty { props: {}; }
        export interface ElementChildrenAttribute { children: {}; }
        export interface IntrinsicAttributes {}
        export interface IntrinsicElements { [key: string]: Element }
    }
    const Elem = <T,U=never>(p: { prop: T, children: (t: T) => T }) => <div></div>;
    Elem({prop: {a: "x"}, children: i => ({a: "z"})});
    const q = <Elem prop={{a: "x"}} children={i => ({a: "z"})} />
    const qq = <Elem prop={{a: "x"}}>{i => ({a: "z"})}</Elem>
    
    interface LitProps<T> { prop: T, children: (x: this) => T }
    const ElemLit = <T extends string>(p: LitProps<T>) => <div></div>;
    ElemLit({prop: "x", children: () => "x"});
    const j = <ElemLit prop="x" children={() => "x"} />
    const jj = <ElemLit prop="x">{() => "x"}</ElemLit>
    
    // Should error
    const arg = <ElemLit prop="x" children={p => "y"} />
                                  ~~~~~~~~~~~~~~~~~~~
!!! error TS2326: Types of property 'children' are incompatible.
!!! error TS2326:   Type '(p: IntrinsicAttributes & LitProps<"x">) => "y"' is not assignable to type '(x: IntrinsicAttributes & LitProps<"x">) => "x"'.
!!! error TS2326:     Type '"y"' is not assignable to type '"x"'.
    const argchild = <ElemLit prop="x">{p => "y"}</ElemLit>
                      ~~~~~~~
!!! error TS2610: The attributes provided to ElemLit are not assignable to type 'IntrinsicAttributes & LitProps<"x" | "y">'
!!! error TS2610:   The attributes provided to ElemLit are not assignable to type 'LitProps<"x" | "y">'
!!! error TS2610:     Types of property 'children' are incompatible.
!!! error TS2610:       Type '(p: IntrinsicAttributes & LitProps<"x">) => "y"' is not assignable to type '(x: LitProps<"x" | "y">) => "x" | "y"'.
!!! error TS2610:         Types of parameters 'p' and 'x' are incompatible.
!!! error TS2610:           Type 'LitProps<"x" | "y">' is not assignable to type 'IntrinsicAttributes & LitProps<"x">'.
!!! error TS2610:             Type 'LitProps<"x" | "y">' is not assignable to type 'LitProps<"x">'.
!!! error TS2610:               Types of property 'prop' are incompatible.
!!! error TS2610:                 Type '"x" | "y"' is not assignable to type '"x"'.
!!! error TS2610:                   Type '"y"' is not assignable to type '"x"'.
    const mismatched = <ElemLit prop="x">{() => 12}</ElemLit>
                        ~~~~~~~
!!! error TS2610: The attributes provided to ElemLit are not assignable to type 'IntrinsicAttributes & LitProps<"x">'
!!! error TS2610:   The attributes provided to ElemLit are not assignable to type 'LitProps<"x">'
!!! error TS2610:     Types of property 'children' are incompatible.
!!! error TS2610:       Type '() => number' is not assignable to type '(x: LitProps<"x">) => "x"'.
!!! error TS2610:         Type 'number' is not assignable to type '"x"'.